- Adds D3 script to index.html file (again)

--- a/required/index.html
+++ b/required/index.html
@@ -51,5 +51,6 @@
   <script src="./static/js/app.js"></script>
   <script src="./static/js/bonus.js"></script>
   <script src="samples.json"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
 
 </html>
