--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- Resolve favicon error: https://stackoverflow.com/questions/31075893/im-getting-favicon-ico-error -->
+  <link rel="shortcut icon" href="">
 </head>
 
 <body>
