--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)">
+          <select id="selDataset">
             
           </select>
         </div>
